--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,14 @@
 ---
-
+import './src/styles/global.css'
+import Header from '../components/Header.astro'
+import HowItWorks from '../components/HowItWorks.astro'
+import Features from '../components/Features.astro'
+import WhoWeAre from '../components/WhoWeAre.tsx'
+import Stories from '../components/Stories.astro'
+import ContactUs from '../components/ContactUs.astro'
+import Footer from '../components/Footer.astro'
 ---
-
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -10,7 +16,14 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro</title>
 	</head>
-	<body>
-		<h1>Astro</h1>
+	<body class="max-w-[1400px] mx-auto">
+		<Header />
+		<img src="/banner.webp" alt="Banner" class="mt-10 w-full">
+		<HowItWorks />
+		<Features />
+		<WhoWeAre client:load />
+		<Stories />
+		<ContactUs />
+		<Footer />
 	</body>
 </html>
