--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -2,7 +2,7 @@
 import FeatureIcon from "./FeatureIcon.astro";
 ---
 
-<section class="bg-gradient-to-r from-[#1538ff] to-[#04cbd4] mt-10 py-5 flex justify-around items-end">
+<section class="bg-gradient-to-r from-[#1538ff] to-[#04cbd4] mt-10 py-10 md:py-5 grid grid-cols-2 gap-y-5 md:flex justify-around items-end">
 
   <FeatureIcon text="Ayudas a los peluditos" image="/cat.svg" size="md" />
   <FeatureIcon text="Gana premios" image="/money.svg" size="md" />
