--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,11 @@
-<nav class="bg-black text-white text-lg flex justify-between px-10">
+<nav class="bg-black text-white text-lg flex justify-between items-center px-4 sm:px-10">
   <img src="/logo-header.png" alt="Logo" class="max-h-[100px]">
-  <ul class="flex gap-8 items-center">
+  <ul class="hidden lg:flex gap-8 items-center">
     <li class="cursor-pointer hover:text-[#04cbd4] transition-colors duration-300">Cómo funciona</li>
     <li class="cursor-pointer hover:text-[#04cbd4] transition-colors duration-300">Quiénes somos</li>
     <li class="cursor-pointer hover:text-[#04cbd4] transition-colors duration-300">Historias</li>
     <li class="cursor-pointer hover:text-[#04cbd4] transition-colors duration-300">Contáctanos</li>
     <li><button class="bg-gradient-to-r from-[#1538ff] to-[#04cbd4] py-3 px-5 rounded-xl cursor-pointer transition-transform duration-300 hover:scale-105">Quiero ayudar</button></li>
   </ul>
+  <button class="lg:hidden h-fit cursor-pointer transition-colors duration-300 hover:bg-gray-800 rounded-lg p-2"><img src="menu.svg" alt="Burguer Menu" class="w-[40px]"></button>
 </nav>
