--- a/src/components/HowItWorks.astro
+++ b/src/components/HowItWorks.astro
@@ -1,8 +1,8 @@
-<section class="grid grid-cols-2 mt-10">
-  <img src="/como-funciona.png" alt="Gato en guacal" class="max-w-10/12 mx-auto">
+<section class="grid md:grid-cols-2 mt-10">
+  <img src="/como-funciona.png" alt="Gato en guacal" class="w-full md:max-w-10/12 md:h-full object-cover object-right mx-auto ">
   <div>
-    <h2 class="text-4xl">¿Cómo funciona?</h2>
-    <p class="text-lg whitespace-pre-line w-11/12 mt-5">Funciona como una rifa tradicional de 100 números, donde cada boleta tiene un valor de $10.000 pesos. Así, al vender todas las boletas, se obtendría un total de $1.000.000 pesos.
+    <h2 class="text-4xl mt-10 md:mt-0 text-center md:text-left">¿Cómo funciona?</h2>
+    <p class="text-lg whitespace-pre-line w-full md:w-11/12 mt-5 text-center md:text-left px-10 md:p-0">Funciona como una rifa tradicional de 100 números, donde cada boleta tiene un valor de $10.000 pesos. Así, al vender todas las boletas, se obtendría un total de $1.000.000 pesos.
 
       El dinero se reparte en un 80 % y 20 %, es decir, $800.000 para el tratamiento de la mascota y $200.000 para el ganador del premio.
 
