--- a/src/components/Stories.astro
+++ b/src/components/Stories.astro
@@ -29,7 +29,7 @@ Hoy, Luna camina con total normalidad y disfruta de largas siestas al sol, rodea
 
   <h2 class="text-white text-center text-4xl">Historias</h2>
 
-  <div class="flex flex-nowrap overflow-x-auto px-18 gap-18 py-12">
+  <div class="flex flex-nowrap overflow-x-auto px-5 sm:px-18 gap-18 py-12">
 
     <StoryCard image="tommy.png" name="Tommy" story={tommyStory} />
     <StoryCard image="milo.png" name="Milo" story={miloStory} />
@@ -38,7 +38,7 @@ Hoy, Luna camina con total normalidad y disfruta de largas siestas al sol, rodea
 
   </div>
 
-  <div class="absolute top-0 right-0 w-10 h-full bg-gradient-to-l from-black/20 to-transparent pointer-events-none"></div>
-  <div class="absolute top-0 left-0 w-10 h-full bg-gradient-to-r from-black/20 to-transparent pointer-events-none"></div>
+  <div class="absolute top-0 right-0 w-6 sm:w-10 h-full bg-gradient-to-l from-black/20 to-transparent pointer-events-none"></div>
+  <div class="absolute top-0 left-0 w-6 sm:w-10 h-full bg-gradient-to-r from-black/20 to-transparent pointer-events-none"></div>
 
 </section>
