--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,9 +1,9 @@
 <footer class="bg-black flex flex-col items-center py-10 mt-10">
-  <img src="/logo-header.png" alt="Logo">
-  <div class="flex gap-10">
-    <a href="https://web.whatsapp.com/" class="cursor-pointer" title="Contactar por WhatsApp"><img src="/footer/whatsapp.svg" alt="Instagram logo" class="h-10"></a>
-    <a href="http://instagram.com/" class="cursor-pointer" title="Visitar perfil de Instagram"><img src="/footer/instagram.svg" alt="Instagram logo" class="h-10"></a>
-    <a href="https://www.facebook.com/" class="cursor-pointer" title="Visitar perfil de Facebook"><img src="/footer/facebook.svg" alt="Instagram logo" class="h-10"></a>
+  <img src="/logo-header.png" alt="Logo" class="max-w-10/12">
+  <div class="flex gap-10 mt-5">
+    <a href="https://web.whatsapp.com/" class="cursor-pointer" title="Contactar por WhatsApp"><img src="/footer/whatsapp.svg" alt="Instagram logo" class="h-8 sm:h-10"></a>
+    <a href="http://instagram.com/" class="cursor-pointer" title="Visitar perfil de Instagram"><img src="/footer/instagram.svg" alt="Instagram logo" class="h-8 sm:h-10"></a>
+    <a href="https://www.facebook.com/" class="cursor-pointer" title="Visitar perfil de Facebook"><img src="/footer/facebook.svg" alt="Instagram logo" class="h-8 sm:h-10"></a>
   </div>
-  <span class="text-white mt-10">© 2025 Huellitas. Todos los derechos reservados.</span>
+  <span class="text-white mt-10 text-xs sm:text-lg">© 2025 Huellitas. Todos los derechos reservados.</span>
 </footer>
