--- a/src/components/ContactUs.astro
+++ b/src/components/ContactUs.astro
@@ -7,11 +7,11 @@
         <span class="text-sm sm:text-xl">Medellín, Colombia</span>
       </div>
       <div class="mt-5 rounded-xl px-3 py-2 flex items-center bg-[#e2e2e2] transition-all duration-400 hover:bg-[#d5d5d5]">
-        <img src="/contact-us/pin.svg" alt="Location pin" class="h-8 mr-3">
+        <img src="/contact-us/phone.svg" alt="Location pin" class="h-8 mr-3">
         <span class="text-sm sm:text-xl">604 434 89 70</span>
       </div>
       <div class="mt-5 rounded-xl px-3 py-2 flex items-center bg-[#e2e2e2] transition-all duration-400 hover:bg-[#d5d5d5]">
-        <img src="/contact-us/pin.svg" alt="Location pin" class="h-8 mr-3">
+        <img src="/contact-us/calendar.svg" alt="Location pin" class="h-8 mr-3">
         <span class="text-sm sm:text-xl">De 7:00 a.m. a 5:00 p.m.</span>
       </div>
       <img src="mapa.png" alt="Mapa" class="mt-5 rounded-xl px-3 py-2">
