--- a/src/components/HowItWorks.astro
+++ b/src/components/HowItWorks.astro
@@ -1,4 +1,4 @@
-<section class="grid md:grid-cols-2 mt-10">
+<section id="HowItWorks" class="grid md:grid-cols-2 mt-10 scroll-mt-40">
   <img src="/como-funciona.png" alt="Gato en guacal" class="w-full md:max-w-10/12 md:h-full object-cover object-right mx-auto ">
   <div>
     <h2 class="text-4xl mt-10 md:mt-0 text-center md:text-left">¿Cómo funciona?</h2>
