--- a/src/components/Stories.astro
+++ b/src/components/Stories.astro
@@ -25,7 +25,7 @@ Hoy, Luna camina con total normalidad y disfruta de largas siestas al sol, rodea
 
 ---
 
-<section class="relative mt-10 bg-[#1538ff] pt-12">
+<section id="Stories" class="relative mt-10 bg-[#1538ff] pt-12 scroll-mt-20">
 
   <h2 class="text-white text-center text-4xl">Historias</h2>
 
