--- a/src/components/ContactUs.astro
+++ b/src/components/ContactUs.astro
@@ -1,4 +1,4 @@
-<section class="mt-10">
+<section id="ContactUs" class="mt-10 scroll-mt-36">
   <h2 class="text-4xl text-center">Contáctanos</h2>
   <div class="mt-10 flex px-10 gap-8 flex-col lg:flex-row items-center">
     <div class="bg-[#f0f0f0] basis-5/12 p-5 rounded-2xl max-w-[510px]">
@@ -17,11 +17,11 @@
       <img src="mapa.png" alt="Mapa" class="mt-5 rounded-xl px-3 py-2">
     </div>
     <div class="bg-[#f0f0f0] basis-7/12 p-5 rounded-2xl flex flex-col items-center min-w-11/12 sm:min-w-[510px] max-w-[510px] md:max-w-[715px]">
-      <input type="text" placeholder="Nombre" class="w-full px-5 py-3 text-sm sm:text-lg rounded-xl bg-[#e2e2e2] transition-all duration-400 hover:bg-[#d5d5d5]">
-      <input type="number" placeholder="Teléfono" class="mt-5 w-full px-5 py-3 text-sm sm:text-lg rounded-xl bg-[#e2e2e2] transition-all duration-400 hover:bg-[#d5d5d5]">
-      <input type="email" placeholder="Correo electrónico" class="mt-5 w-full px-5 py-3 text-sm sm:text-lg rounded-xl bg-[#e2e2e2] transition-all duration-400 hover:bg-[#d5d5d5]">
-      <textarea placeholder="Mensaje" rows="6" class="mt-5 w-full px-5 py-3 text-sm sm:text-lg rounded-xl bg-[#e2e2e2] transition-all duration-400 hover:bg-[#d5d5d5]"></textarea>
-      <button class="bg-[#444444] text-white mt-5 w-fit px-14 py-3 rounded-xl text-sm sm:text-lg transition-all duration-400 hover:bg-[#333333] cursor-pointer">Enviar mensaje</button>
+      <input type="text" placeholder="Nombre" class="w-full px-5 py-3 text-md sm:text-lg rounded-xl bg-[#e2e2e2] transition-all duration-400 hover:bg-[#d5d5d5]">
+      <input type="number" placeholder="Teléfono" class="mt-5 w-full px-5 py-3 text-md sm:text-lg rounded-xl bg-[#e2e2e2] transition-all duration-400 hover:bg-[#d5d5d5]">
+      <input type="email" placeholder="Correo electrónico" class="mt-5 w-full px-5 py-3 text-md sm:text-lg rounded-xl bg-[#e2e2e2] transition-all duration-400 hover:bg-[#d5d5d5]">
+      <textarea placeholder="Mensaje" rows="6" class="mt-5 w-full px-5 py-3 text-md sm:text-lg rounded-xl bg-[#e2e2e2] transition-all duration-400 hover:bg-[#d5d5d5]"></textarea>
+      <button class="bg-[#444444] text-white mt-5 w-fit px-14 py-3 rounded-xl text-md sm:text-lg transition-all duration-400 hover:bg-[#333333] cursor-pointer">Enviar mensaje</button>
     </div>
   </div>
 </section>
