--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Stories from '../components/Stories.astro'
 import ContactUs from '../components/ContactUs.astro'
 import Footer from '../components/Footer.astro'
 ---
-<html lang="es">
+<html lang="es" class="scroll-smooth">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -18,7 +18,7 @@ import Footer from '../components/Footer.astro'
 	</head>
 	<body class="max-w-[1400px] mx-auto">
 		<Header />
-		<img src="/banner.webp" alt="Banner" class="mt-10 w-full">
+		<img id="Home" src="/banner.webp" alt="Banner" class="mt-10 w-full scroll-mt-40">
 		<HowItWorks />
 		<Features />
 		<WhoWeAre client:load />
