--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,8 @@ import Footer from '../components/Footer.astro'
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>Huellitas</title>
+		<meta name="description" content="Ayuda a los peluditos a través de Huellitas" />
 	</head>
 	<body class="max-w-[1400px] mx-auto">
 		<Header />
