--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
-import './src/styles/global.css'
-import Header from '../components/Header.astro'
-import HowItWorks from '../components/HowItWorks.astro'
-import Features from '../components/Features.astro'
-import WhoWeAre from '../components/WhoWeAre.tsx'
-import Stories from '../components/Stories.astro'
-import ContactUs from '../components/ContactUs.astro'
-import Footer from '../components/Footer.astro'
+import '@/styles/global.css'
+import Header from '@/components/Header.astro'
+import HowItWorks from '@/components/HowItWorks.astro'
+import Features from '@/components/Features.astro'
+import WhoWeAre from '@/components/WhoWeAre.tsx'
+import Stories from '@/components/Stories.astro'
+import ContactUs from '@/components/ContactUs.astro'
+import Footer from '@/components/Footer.astro'
 ---
 <html lang="es" class="scroll-smooth">
 	<head>
