--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import Footer from '@/components/Footer.astro'
 	</head>
 	<body class="max-w-[1400px] mx-auto">
 		<Header />
-		<img id="Home" src="/banner.webp" alt="Banner" class="mt-10 w-full scroll-mt-40">
+		<img id="Home" src="banner.webp" alt="Banner" class="mt-10 w-full scroll-mt-40">
 		<HowItWorks />
 		<Features />
 		<WhoWeAre client:load />
