--- a/src/components/FeatureIcon.astro
+++ b/src/components/FeatureIcon.astro
@@ -7,6 +7,6 @@ interface Props {
 const { text, image, size } = Astro.props;
 ---
 <div class="flex flex-col items-center">
-  <img src={`/features/${image}`} alt="Cat" class={size === 'md' ? 'w-14' : 'w-16'}>
+  <img src={`features/${image}`} alt="Cat" class={size === 'md' ? 'w-14' : 'w-16'}>
   <span class="text-white sm:text-lg mt-2">{text}</span>
 </div>
