--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 <nav class="bg-black text-white text-lg flex justify-between items-center px-4 sm:px-10 sticky top-0 z-10">
-  <a href="#Home"><img src="/logo-header.png" alt="Logo" class="max-h-[100px]"></a>
+  <a href="#Home"><img src="logo-header.png" alt="Logo" class="max-h-[100px]"></a>
   
   <ul id="menuList" class="hidden flex-col py-5 lg:py-0 justify-center lg:flex lg:flex-row gap-8 gap-y-16 items-center absolute top-full left-0 w-full bg-black lg:static lg:w-auto">
     <li class="text-center cursor-pointer hover:text-[#04cbd4] transition-colors duration-300 px-4 py-2 lg:px-0 lg:py-0"><a href="#HowItWorks">Cómo funciona</a></li>
