--- a/src/components/StoryCard.astro
+++ b/src/components/StoryCard.astro
@@ -7,7 +7,7 @@ interface Props {
 const { image, name, story } = Astro.props;
 ---
 <div class="bg-white shadow-2xl min-w-[350px] max-w-[350px] sm:min-w-[400px] sm:max-w-[400px] flex flex-col gap-4 justify-center items-center rounded-2xl py-5 px-8 transition-transform duration-400 hover:scale-105">
-  <img src={`/stories/${image}`} alt={`Historia de ${name}`} class="size-36 shadow-xl rounded-full object-contain">
+  <img src={`stories/${image}`} alt={`Historia de ${name}`} class="size-36 shadow-xl rounded-full object-contain">
   <h3 class="text-3xl">{name}</h3>
   <p class="whitespace-pre-line">{story}</p>
 </div>
